--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -24,17 +24,15 @@ html, body {
   }
 
   &__options {
-    width: 100%;
+    width: var(--options-container-width);
+    position: fixed;
+    background-color: white;
+    opacity: .5;
+    top: 0;
+    right: 48px;
+    padding: 24px;
+    overflow: auto;
+    max-height: 100vh;
+    box-sizing: border-box;
   }
-}
-
-.options {
-  position: relative;
-  width: var(--options-container-width);
-  position: fixed;
-  background-color: white;
-  opacity: .5;
-  top: 0;
-  right: 48px;
-  padding: 16px;
 }
