update project name

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Zero</title>
+    <title>Search in PDF</title>
   </head>
   <body>
     <div id="root"></div>
