--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -35,4 +35,10 @@ html, body {
     max-height: 100vh;
     box-sizing: border-box;
   }
+
+  &__selectorsContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
