--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,5 @@
 @import './text-field.scss';
 @import './uploader.scss';
 @import './options.scss';
+@import './modal.scss';
+@import './button.scss';
