add save button handler which shows filled data

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,5 @@
 @import './options.scss';
 @import './modal.scss';
 @import './button.scss';
+@import './typography.scss';
+@import './spacing.scss';
